# xray-audit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
deploy/logrotate/: xray
deploy/nginx/: xray-audit.conf
deploy/systemd/: README.md  xray-audit-ai-summary.service  xray-audit-api.service  xray-audit-collector.service
docker/: Dockerfile  README.md  collector_healthcheck.py  docker-compose.yml  entrypoint.sh
docs/: HANDOFF_GLOBAL_MEMORY.md  MEMORY_INDEX.json  MEMORY_UPDATE_SOP.md  NODE_PRIMARY_MEMORY.md  XRAY_LOG_COMPAT.md
scripts/: benchmark_parser.py  export_snapshot.ps1  export_snapshot.sh  simulate_log_writer.py
sql/: schema.sql
sql/migrations/: 20260218_add_audit_access_indexes.sql  20260218_add_error_and_job_state.sql  20260218_add_geo_cache_table.sql  20260219_add_auth_and_runtime_config.sql  20260220_add_error_fulltext_index.sql  20260221_add_admin_force_change_flag.sql
tests/: test_api.py  test_error_parser.py  test_filtering.py  test_log_contract.py  test_parser.py  test_tailer.py
web_admin/: index.html  package.json  tsconfig.json  vite.config.ts
web_admin/src/: App.vue  main.ts  styles.css  types.ts
xray_audit/: __init__.py  ai_summary.py  api.py  auth.py  collector.py  collector_runner.py  config.py  error_parser.py  filtering.py  geoip.py  init_db.py  models.py  parser.py  redis_cache.py  run_api.py  runtime_config.py  storage.py  tailer.py
xray_audit/dashboard/: app.js  index.html  style.css
(+15 files in other folders)
